[package]
name = "k_nearest"
version = "0.1.0"
edition = "2021"
license-file = "license.md"
description = "K-nearest neighbors search for points with maximal search radius"
homepage = "https://github.com/antonWetzel/k_nearest"
repository = "https://github.com/antonWetzel/k_nearest"
readme = "readme.md"
keywords = ["pointcloud", "knearest"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
